feat: 可以设置给排名为前多少名的队伍显示排名信息

--- a/config.json
+++ b/config.json
@@ -17,5 +17,6 @@
     "award_best_girl": [
         "11"
     ],
-    "honors_show_citation": true
+    "honors_show_citation": true,
+    "top_team_rank": 3
 }
