feat: 增加可以设置 first wa

--- a/config.json
+++ b/config.json
@@ -18,5 +18,6 @@
         "11"
     ],
     "honors_show_citation": true,
-    "top_team_rank": 3
+    "top_team_rank": 3,
+    "first_wa": false
 }
